@@ -1,3 +1,10 @@
+Sat May  2 09:49:23 2009  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/compiler/Compiler.java: refactoring: rename
+	  constant: programId -> ProgramName.
+
+	* net/loveruby/cflat/compiler/Options.java: ditto.
+
 Sat May  2 09:30:51 2009  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/compiler/Compiler.java (commandMain):
